# pico_plate_recognition

./: README.md
C/: CMakeLists.txt
C/ArduCAM/: ArduCAM.cpp  ArduCAM.h  CMakeLists.txt  ov2640_macros.h  ov2640_regs.h  ov5642_regs.h
C/Examples/Arducam_MINI_2MP_Plus_Videostreaing/: Arducam_MINI_2MP_Plus_Videostreaing.cpp  CMakeLists.txt  layer1.cpp  layer1.h  plates.h  rgb.pio  vga_graphics.cpp  weights.h
C/Examples/Arducam_MINI_2MP_Plus_Videostreaing/plates/: 2digit_10plates  3digit_10plates  4digit_10plates
C/Examples/Arducam_MINI_2MP_Plus_Videostreaing/weights/: data_binary  ex4weight_theta1  ex4weight_theta2
C/vga_graphics/: CMakeLists.txt
matlab_scripts/: pack_data.m  predict.m  uart_to_pico.m  uart_to_pico_d2.m  weights.mat
